
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct iwinfo_ops {int dummy; } ;
struct TYPE_4__ {int minq; int maxq; int boffset; int bfactor; int led; struct TYPE_4__* next; } ;
typedef TYPE_1__ rule_t ;


 int BACKEND_RETRY_DELAY ;
 int LOG_DAEMON ;
 int LOG_INFO ;
 int LOG_PID ;
 void* calloc (int,int) ;
 char* ifname ;
 scalar_t__ init_led (int *,char*) ;
 int iwinfo_finish () ;
 int log_rules (TYPE_1__*) ;
 scalar_t__ open_backend (struct iwinfo_ops const**,char*) ;
 int openlog (char*,int ,int ) ;
 int printf (char*,...) ;
 int quality (struct iwinfo_ops const*,char*) ;
 int sscanf (char*,char*,int*) ;
 int syslog (int ,char*,char*,int,int) ;
 int update_leds (TYPE_1__*,int) ;
 int usleep (int) ;

int main(int argc, char **argv)
{
 int i,q,q0,r,s;
 const struct iwinfo_ops *iw = ((void*)0);
 rule_t *headrule = ((void*)0), *currentrule = ((void*)0);

 if (argc < 9 || ( (argc-4) % 5 != 0 ) )
 {
  printf("syntax: %s (ifname) (refresh) (threshold) (rule) [rule] ...\n", argv[0]);
  printf("  rule: (sysfs-name) (minq) (maxq) (offset) (factore)\n");
  return 1;
 }

 ifname = argv[1];


 if ( sscanf(argv[2], "%d", &r) != 1 )
  return 1;


 if ( sscanf(argv[3], "%d", &s) != 1 )
  return 1;

 openlog("rssileds", LOG_PID, LOG_DAEMON);
 syslog(LOG_INFO, "monitoring %s, refresh rate %d, threshold %d\n", ifname, r, s);

 currentrule = headrule;
 for (i=4; i<argc; i=i+5) {
  if (! currentrule)
  {

   currentrule = calloc(sizeof(rule_t),1);
   headrule = currentrule;
  }
  else
  {

   currentrule->next = calloc(sizeof(rule_t),1);
   currentrule = currentrule->next;
  }

  if ( init_led(&(currentrule->led), argv[i]) )
   return 1;

  if ( sscanf(argv[i+1], "%d", &(currentrule->minq)) != 1 )
   return 1;

  if ( sscanf(argv[i+2], "%d", &(currentrule->maxq)) != 1 )
   return 1;

  if ( sscanf(argv[i+3], "%d", &(currentrule->boffset)) != 1 )
   return 1;

  if ( sscanf(argv[i+4], "%d", &(currentrule->bfactor)) != 1 )
   return 1;
 }
 log_rules(headrule);

 q0 = -1;
 do {
  q = quality(iw, ifname);
  if ( q < q0 - s || q > q0 + s ) {
   update_leds(headrule, q);
   q0=q;
  };

  if ( q == -1 && q0 == -1 ) {
   if (iw) {
    iwinfo_finish();
    iw=((void*)0);
    usleep(BACKEND_RETRY_DELAY);
   }
   while (open_backend(&iw, ifname))
    usleep(BACKEND_RETRY_DELAY);
  }
  usleep(r);
 } while(1);

 iwinfo_finish();

 return 0;
}
